# Django-Books

./: .dockerignore  Dockerfile  Makefile  README.md  actions.txt  docker-compose.production.yml  docker-compose.yml  manage.py  pyproject.toml
.envs/.local/: .postgres.env
.envs/.production/: .django.env  .postgres.env
books/: admin.py  filters.py  models.py  urls.py  views.py
books/api/: serializers.py  views.py
books/management/commands/: create_default_superuser.py  generate_books.py
books/migrations/: 0001_initial.py
books/static/: style.css
books/templates/: base.html  home.html  index.html
books/templates/books/: base.html
compose/local/django/: Dockerfile
compose/production/django/: Dockerfile
core/: api_router.py  asgi.py  settings.py  urls.py  wsgi.py
core/settings/: logger.py  logger2.py
data/db/base/1/: 2619
data/db/base/5/: 1247  1249  1259  2224  24576  24577  24581  24582  24584  24585  24588  24590  24592  24593  24596  24598  24604  24606  24610  24612  24613  24616  24618  24620  24626  24630  24632  24639  24641  24653  24654  24655  24656  24668  24670  24682  24684  24690  24691  24703  (+37 more)
data/db/global/: 1260  pg_control  pg_internal.init
data/db/pg_stat/: pgstat.stat
scripts/: entrypoint.sh  prestart.sh
tests/: test_api.py
